<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/list_item_height"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="@dimen/list_item_height"
        android:layout_height="@dimen/list_item_height"
        android:layout_margin="@dimen/list_item_thumbnail_padding">

        <ImageView
            android:id="@+id/book_cover_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/img_content_descr"
            android:scaleType="centerInside"
            android:src="@drawable/book" />

        <TextView
            android:id="@+id/no_img_available"
            android:layout_width="@dimen/list_item_no_img_available_txt_width"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/no_img_available"
            android:textAllCaps="true"
            android:textSize="@dimen/list_item_no_img_available_txt_font_size"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/horizontal_spacing"
        android:layout_marginStart="@dimen/horizontal_spacing"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/authors"
            style="@style/ListItemAuthors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/authors" />

        <TextView
            android:id="@+id/title"
            style="@style/ListItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title" />

        <TextView
            android:id="@+id/publishing_info"
            style="@style/ListItemContents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/publishing_info" />

        <LinearLayout
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RatingBar
                android:id="@+id/stars"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="0"
                android:stepSize="0.5" />

            <TextView
                android:id="@+id/num_ratings"
                style="@style/ListItemContents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/horizontal_spacing"
                android:layout_marginStart="@dimen/horizontal_spacing"
                android:text="@string/num_ratings" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>