<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.booklistingapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/SearchInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_instructions_1" />

        <EditText
            android:id="@+id/key0"
            style="@style/SearchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/search_hint_keyword"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <TextView
            style="@style/SearchInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_spacing_between_content_areas"
            android:text="@string/search_instructions_2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio1_author"
                    style="@style/SearchOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_author" />

                <RadioButton
                    android:id="@+id/radio1_title"
                    style="@style/SearchOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_title" />

            </RadioGroup>

            <EditText
                android:id="@+id/key1"
                style="@style/SearchBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/horizontal_spacing"
                android:layout_marginStart="@dimen/horizontal_spacing"
                android:layout_weight="1"
                android:hint="@string/search_hint_string"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </LinearLayout>

        <TextView
            style="@style/SearchInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_spacing_between_content_areas"
            android:text="@string/search_instructions_2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_spacing_between_content_areas"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio2_author"
                    style="@style/SearchOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_author" />

                <RadioButton
                    android:id="@+id/radio2_title"
                    style="@style/SearchOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_title" />

            </RadioGroup>

            <EditText
                android:id="@+id/key2"
                style="@style/SearchBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/horizontal_spacing"
                android:layout_marginStart="@dimen/horizontal_spacing"
                android:layout_weight="1"
                android:hint="@string/search_hint_string"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </LinearLayout>

        <TextView
            style="@style/SearchInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_spacing_between_content_areas"
            android:text="@string/order" />

        <RadioGroup
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_spacing_between_content_areas">

            <RadioButton
                android:id="@+id/radio3_relevance"
                style="@style/SearchOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/relevance" />

            <RadioButton
                android:id="@+id/radio3_date"
                style="@style/SearchOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

        </RadioGroup>

        <FrameLayout
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_touch_target_height"
            android:layout_marginTop="@dimen/vertical_spacing_between_content_areas">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/button_touch_target_horizontal_padding"
                android:layout_marginLeft="@dimen/button_touch_target_horizontal_padding"
                android:layout_marginRight="@dimen/button_touch_target_horizontal_padding"
                android:layout_marginStart="@dimen/button_touch_target_horizontal_padding"
                android:background="@drawable/button"
                android:padding="@dimen/search_button_padding">

                <ImageView
                    android:id="@+id/search_icon"
                    android:layout_width="@dimen/icon_height"
                    android:layout_height="@dimen/icon_height"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/icon_content_descr"
                    android:src="@drawable/ic_search_24dp" />

                <TextView
                    style="@style/SearchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"

                    android:layout_toEndOf="@id/search_icon"
                    android:layout_toRightOf="@id/search_icon"
                    android:text="@string/search" />

            </RelativeLayout>

        </FrameLayout>

    </LinearLayout>

</ScrollView>
