<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/new_search_button"
        style="@style/SearchButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/emptylist_big_margin"
        android:paddingLeft="@dimen/search_button_text_padding"
        android:paddingStart="@dimen/search_button_text_padding"
        android:paddingRight="@dimen/search_button_text_padding"
        android:paddingEnd="@dimen/search_button_text_padding"
        android:text="@string/new_search" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/new_search_button">

    </ListView>

    <!-- Layout of the EmptyView -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/emptylist_big_margin"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/EmptyListImage"
            android:layout_width="@dimen/emptylist_image_size"
            android:layout_height="@dimen/emptylist_image_size"
            android:contentDescription="@string/img_book_content_descr"
            android:src="@drawable/book" />

        <TextView
            android:id="@+id/EmptyListMessage"
            style="@style/EmptyListMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_spacing_between_content_areas"
            android:gravity="center"
            android:text="@string/no_results_found" />

        <TextView
            android:id="@+id/EmptyListSearchHint"
            style="@style/EmptyListSearchHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_spacing_between_content_areas"
            android:gravity="center"
            android:text="@string/hint_for_new_search" />

    </LinearLayout>

</RelativeLayout>